api/python/indigo.py

    
    # auto-generated with "generate-python.py indigo.h"
    self._lib.indigoVersion.restype = c_char_p
    self._lib.indigoVersion.argtypes = None
    self._lib.indigoAllocSessionId.restype = c_ulonglong
    self._lib.indigoAllocSessionId.argtypes = None
    self._lib.indigoSetSessionId.restype = None
    self._lib.indigoSetSessionId.argtypes = [c_ulonglong]
    self._lib.indigoReleaseSessionId.restype = None
    self._lib.indigoReleaseSessionId.argtypes = [c_ulonglong]
    self._lib.indigoGetLastError.restype = c_char_p
    self._lib.indigoGetLastError.argtypes = None
    self._lib.indigoSetErrorMessage.restype = None
    self._lib.indigoSetErrorMessage.argtypes = [c_char_p]
    self._lib.indigoFree.restype = c_int
    self._lib.indigoFree.argtypes = [c_int]
    self._lib.indigoClone.restype = c_int
    self._lib.indigoClone.argtypes = [c_int]
    self._lib.indigoCountReferences.restype = c_int
    self._lib.indigoCountReferences.argtypes = None
    self._lib.indigoSetOption.restype = c_int
    self._lib.indigoSetOption.argtypes = [c_char_p, c_char_p]
    self._lib.indigoSetOptionInt.restype = c_int
    self._lib.indigoSetOptionInt.argtypes = [c_char_p, c_int]
    self._lib.indigoSetOptionBool.restype = c_int
    self._lib.indigoSetOptionBool.argtypes = [c_char_p, c_int]
    self._lib.indigoSetOptionFloat.restype = c_int
    self._lib.indigoSetOptionFloat.argtypes = [c_char_p, c_float]
    self._lib.indigoSetOptionColor.restype = c_int
    self._lib.indigoSetOptionColor.argtypes = [c_char_p, c_float, c_float, c_float]
    self._lib.indigoSetOptionXY.restype = c_int
    self._lib.indigoSetOptionXY.argtypes = [c_char_p, c_int, c_int]
    self._lib.indigoReadFile.restype = c_int
    self._lib.indigoReadFile.argtypes = [c_char_p]
    self._lib.indigoReadString.restype = c_int
    self._lib.indigoReadString.argtypes = [c_char_p]
    self._lib.indigoLoadString.restype = c_int
    self._lib.indigoLoadString.argtypes = [c_char_p]
    self._lib.indigoReadBuffer.restype = c_int
    self._lib.indigoReadBuffer.argtypes = [c_char_p, c_int]
    self._lib.indigoLoadBuffer.restype = c_int
    self._lib.indigoLoadBuffer.argtypes = [c_char_p, c_int]
    self._lib.indigoWriteFile.restype = c_int
    self._lib.indigoWriteFile.argtypes = [c_char_p]
    self._lib.indigoWriteBuffer.restype = c_int
    self._lib.indigoWriteBuffer.argtypes = None
    self._lib.indigoLoadMolecule.restype = c_int
    self._lib.indigoLoadMolecule.argtypes = [c_int]
    self._lib.indigoLoadMoleculeFromString.restype = c_int
    self._lib.indigoLoadMoleculeFromString.argtypes = [c_char_p]
    self._lib.indigoLoadMoleculeFromFile.restype = c_int
    self._lib.indigoLoadMoleculeFromFile.argtypes = [c_char_p]
    self._lib.indigoLoadMoleculeFromBuffer.restype = c_int
    self._lib.indigoLoadMoleculeFromBuffer.argtypes = [c_char_p, c_int]
    self._lib.indigoLoadQueryMolecule.restype = c_int
    self._lib.indigoLoadQueryMolecule.argtypes = [c_int]
    self._lib.indigoLoadQueryMoleculeFromString.restype = c_int
    self._lib.indigoLoadQueryMoleculeFromString.argtypes = [c_char_p]
    self._lib.indigoLoadQueryMoleculeFromFile.restype = c_int
    self._lib.indigoLoadQueryMoleculeFromFile.argtypes = [c_char_p]
    self._lib.indigoLoadQueryMoleculeFromBuffer.restype = c_int
    self._lib.indigoLoadQueryMoleculeFromBuffer.argtypes = [c_char_p, c_int]
    self._lib.indigoLoadSmarts.restype = c_int
    self._lib.indigoLoadSmarts.argtypes = [c_int]
    self._lib.indigoLoadSmartsFromString.restype = c_int
    self._lib.indigoLoadSmartsFromString.argtypes = [c_char_p]
    self._lib.indigoLoadSmartsFromFile.restype = c_int
    self._lib.indigoLoadSmartsFromFile.argtypes = [c_char_p]
    self._lib.indigoLoadSmartsFromBuffer.restype = c_int
    self._lib.indigoLoadSmartsFromBuffer.argtypes = [c_char_p, c_int]
    self._lib.indigoSaveMolfile.restype = c_int
    self._lib.indigoSaveMolfile.argtypes = [c_int, c_int]
    self._lib.indigoSaveMolfileToFile.restype = c_int
    self._lib.indigoSaveMolfileToFile.argtypes = [c_int, c_char_p]
    self._lib.indigoMolfile.restype = c_char_p
    self._lib.indigoMolfile.argtypes = [c_int]
    self._lib.indigoSaveCml.restype = c_int
    self._lib.indigoSaveCml.argtypes = [c_int, c_int]
    self._lib.indigoSaveCmlToFile.restype = c_int
    self._lib.indigoSaveCmlToFile.argtypes = [c_int, c_char_p]
    self._lib.indigoCml.restype = c_char_p
    self._lib.indigoCml.argtypes = [c_int]
    self._lib.indigoSaveMDLCT.restype = c_int
    self._lib.indigoSaveMDLCT.argtypes = [c_int, c_int]
    self._lib.indigoLoadReaction.restype = c_int
    self._lib.indigoLoadReaction.argtypes = [c_int]
    self._lib.indigoLoadReactionFromString.restype = c_int
    self._lib.indigoLoadReactionFromString.argtypes = [c_char_p]
    self._lib.indigoLoadReactionFromFile.restype = c_int
    self._lib.indigoLoadReactionFromFile.argtypes = [c_char_p]
    self._lib.indigoLoadReactionFromBuffer.restype = c_int
    self._lib.indigoLoadReactionFromBuffer.argtypes = [c_char_p, c_int]
    self._lib.indigoLoadQueryReaction.restype = c_int
    self._lib.indigoLoadQueryReaction.argtypes = [c_int]
    self._lib.indigoLoadQueryReactionFromString.restype = c_int
    self._lib.indigoLoadQueryReactionFromString.argtypes = [c_char_p]
    self._lib.indigoLoadQueryReactionFromFile.restype = c_int
    self._lib.indigoLoadQueryReactionFromFile.argtypes = [c_char_p]
    self._lib.indigoLoadQueryReactionFromBuffer.restype = c_int
    self._lib.indigoLoadQueryReactionFromBuffer.argtypes = [c_char_p, c_int]
    self._lib.indigoCreateReaction.restype = c_int
    self._lib.indigoCreateReaction.argtypes = None
    self._lib.indigoCreateQueryReaction.restype = c_int
    self._lib.indigoCreateQueryReaction.argtypes = None
    self._lib.indigoAddReactant.restype = c_int
    self._lib.indigoAddReactant.argtypes = [c_int, c_int]
    self._lib.indigoAddProduct.restype = c_int
    self._lib.indigoAddProduct.argtypes = [c_int, c_int]
    self._lib.indigoCountReactants.restype = c_int
    self._lib.indigoCountReactants.argtypes = [c_int]
    self._lib.indigoCountProducts.restype = c_int
    self._lib.indigoCountProducts.argtypes = [c_int]
    self._lib.indigoCountMolecules.restype = c_int
    self._lib.indigoCountMolecules.argtypes = [c_int]
    self._lib.indigoIterateReactants.restype = c_int
    self._lib.indigoIterateReactants.argtypes = [c_int]
    self._lib.indigoIterateProducts.restype = c_int
    self._lib.indigoIterateProducts.argtypes = [c_int]
    self._lib.indigoIterateMolecules.restype = c_int
    self._lib.indigoIterateMolecules.argtypes = [c_int]
    self._lib.indigoSaveRxnfile.restype = c_int
    self._lib.indigoSaveRxnfile.argtypes = [c_int, c_int]
    self._lib.indigoSaveRxnfileToFile.restype = c_int
    self._lib.indigoSaveRxnfileToFile.argtypes = [c_int, c_char_p]
    self._lib.indigoRxnfile.restype = c_char_p
    self._lib.indigoRxnfile.argtypes = [c_int]
    self._lib.indigoAutomap.restype = c_int
    self._lib.indigoAutomap.argtypes = [c_int, c_char_p]
    self._lib.indigoIterateAtoms.restype = c_int
    self._lib.indigoIterateAtoms.argtypes = [c_int]
    self._lib.indigoIteratePseudoatoms.restype = c_int
    self._lib.indigoIteratePseudoatoms.argtypes = [c_int]
    self._lib.indigoIterateRSites.restype = c_int
    self._lib.indigoIterateRSites.argtypes = [c_int]
    self._lib.indigoIterateRGroups.restype = c_int
    self._lib.indigoIterateRGroups.argtypes = [c_int]
    self._lib.indigoIterateRGroupFragments.restype = c_int
    self._lib.indigoIterateRGroupFragments.argtypes = [c_int]
    self._lib.indigoCountAttachmentPoints.restype = c_int
    self._lib.indigoCountAttachmentPoints.argtypes = [c_int]
    self._lib.indigoIsPseudoatom.restype = c_int
    self._lib.indigoIsPseudoatom.argtypes = [c_int]
    self._lib.indigoIsRSite.restype = c_int
    self._lib.indigoIsRSite.argtypes = [c_int]
    self._lib.indigoSingleAllowedRGroup.restype = c_int
    self._lib.indigoSingleAllowedRGroup.argtypes = [c_int]
    self._lib.indigoPseudoatomLabel.restype = c_char_p
    self._lib.indigoPseudoatomLabel.argtypes = [c_int]
    self._lib.indigoDegree.restype = c_int
    self._lib.indigoDegree.argtypes = [c_int]
    self._lib.indigoGetCharge.restype = c_int
    self._lib.indigoGetCharge.argtypes = [c_int, POINTER(c_int)]
    self._lib.indigoGetExplicitValence.restype = c_int
    self._lib.indigoGetExplicitValence.argtypes = [c_int, POINTER(c_int)]
    self._lib.indigoGetRadicalElectrons.restype = c_int
    self._lib.indigoGetRadicalElectrons.argtypes = [c_int, POINTER(c_int)]
    self._lib.indigoAtomNumber.restype = c_int
    self._lib.indigoAtomNumber.argtypes = [c_int]
    self._lib.indigoAtomIsotope.restype = c_int
    self._lib.indigoAtomIsotope.argtypes = [c_int]
    self._lib.indigoResetCharge.restype = c_int
    self._lib.indigoResetCharge.argtypes = [c_int]
    self._lib.indigoResetExplicitValence.restype = c_int
    self._lib.indigoResetExplicitValence.argtypes = [c_int]
    self._lib.indigoResetRadical.restype = c_int
    self._lib.indigoResetRadical.argtypes = [c_int]
    self._lib.indigoResetIsotope.restype = c_int
    self._lib.indigoResetIsotope.argtypes = [c_int]
    self._lib.indigoCountAtoms.restype = c_int
    self._lib.indigoCountAtoms.argtypes = [c_int]
    self._lib.indigoCountBonds.restype = c_int
    self._lib.indigoCountBonds.argtypes = [c_int]
    self._lib.indigoCountPseudoatoms.restype = c_int
    self._lib.indigoCountPseudoatoms.argtypes = [c_int]
    self._lib.indigoCountRSites.restype = c_int
    self._lib.indigoCountRSites.argtypes = [c_int]
    self._lib.indigoIterateBonds.restype = c_int
    self._lib.indigoIterateBonds.argtypes = [c_int]
    self._lib.indigoBondOrder.restype = c_int
    self._lib.indigoBondOrder.argtypes = [c_int]
    self._lib.indigoBondStereo.restype = c_int
    self._lib.indigoBondStereo.argtypes = [c_int]
    self._lib.indigoIterateNeighbors.restype = c_int
    self._lib.indigoIterateNeighbors.argtypes = [c_int]
    self._lib.indigoBond.restype = c_int
    self._lib.indigoBond.argtypes = [c_int]
    self._lib.indigoGetAtom.restype = c_int
    self._lib.indigoGetAtom.argtypes = [c_int, c_int]
    self._lib.indigoGetBond.restype = c_int
    self._lib.indigoGetBond.argtypes = [c_int, c_int]
    self._lib.indigoCisTransClear.restype = c_int
    self._lib.indigoCisTransClear.argtypes = [c_int]
    self._lib.indigoStereocentersClear.restype = c_int
    self._lib.indigoStereocentersClear.argtypes = [c_int]
    self._lib.indigoCountStereocenters.restype = c_int
    self._lib.indigoCountStereocenters.argtypes = [c_int]
    self._lib.indigoGrossFormula.restype = c_int
    self._lib.indigoGrossFormula.argtypes = [c_int]
    self._lib.indigoMolecularWeight.restype = c_float
    self._lib.indigoMolecularWeight.argtypes = [c_int]
    self._lib.indigoMostAbundantMass.restype = c_float
    self._lib.indigoMostAbundantMass.argtypes = [c_int]
    self._lib.indigoMonoisotopicMass.restype = c_float
    self._lib.indigoMonoisotopicMass.argtypes = [c_int]
    self._lib.indigoCanonicalSmiles.restype = c_char_p
    self._lib.indigoCanonicalSmiles.argtypes = [c_int]
    self._lib.indigoLayeredCode.restype = c_char_p
    self._lib.indigoLayeredCode.argtypes = [c_int]
    self._lib.indigoCountComponents.restype = c_int
    self._lib.indigoCountComponents.argtypes = [c_int]
    self._lib.indigoXYZ.restype = POINTER(c_float)
    self._lib.indigoXYZ.argtypes = [c_int]
    self._lib.indigoCreateSubmolecule.restype = c_int
    self._lib.indigoCreateSubmolecule.argtypes = [c_int, c_int, POINTER(c_int)]
    self._lib.indigoCreateEdgeSubmolecule.restype = c_int
    self._lib.indigoCreateEdgeSubmolecule.argtypes = [c_int, c_int, POINTER(c_int), c_int, POINTER(c_int)]
    self._lib.indigoAlignAtoms.restype = c_float
    self._lib.indigoAlignAtoms.argtypes = [c_int, c_int, POINTER(c_int), POINTER(c_float)]
    self._lib.indigoAromatize.restype = c_int
    self._lib.indigoAromatize.argtypes = [c_int]
